--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,12 +29,12 @@ open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn")
 current_scene="res://player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Player.gd"]
+selected_script="res://Player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
