--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,3 +19,8 @@ show_builtin_actions=false
 [script_setup]
 
 last_selected_language="GDScript"
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(0.223529, 1, 1, 1)
