--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,13 +29,13 @@ open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob
 current_scene="res://mob.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Player.gd"]
-selected_script="res://Player.gd"
+open_scripts=["res://Mob.gd", "res://Player.gd"]
+selected_script="res://Mob.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
