--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -27,9 +27,9 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn")
 current_scene="res://main.tscn"
-center_split_offset=0
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -47,3 +47,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=true
+show_search=true
