--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -24,4 +24,4 @@ last_selected_language="GDScript"
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.223529, 1, 1, 1)
+recent_presets=PackedColorArray(0.223529, 1, 1, 1, 0.282353, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0.411765, 1, 1, 1, 0.411765, 0.317647, 1, 1, 0.203922, 0.317647, 1, 1, 0.466667, 0.317647, 1, 1, 0.466667, 0, 1)
